# xyz-to-las

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yml
include/: InputProcessor.hpp  PointCollector.hpp
src/: InputProcessor.cpp  PointCollector.cpp  main.cpp
test/: test_parser.cpp
